--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/brujula-react/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.b87b0275.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.116be1e7.js">
-    <link rel="stylesheet" href="/assets/index.7a766d61.css">
+    <title>Brújula</title>
+    <script type="module" crossorigin src="/brujula-react/assets/index.b87b0275.js"></script>
+    <link rel="modulepreload" href="/brujula-react/assets/vendor.116be1e7.js">
+    <link rel="stylesheet" href="/brujula-react/assets/index.7a766d61.css">
   </head>
   <body>
     <div id="root"></div>
